src/AnalizadorSintactico/y.output
   0  $accept : programa $end

   1  programa : encabezado_prog bloque_sentencias

   2  encabezado_prog : id

   3  bloque_sentencias : bloque_sentencias '{' sentencia '}'
   4                    | '{' sentencia '}'
   5                    | '{' sentencia
   6                    | sentencia '}'

   7  bloque_sentencias_For : sentencias_For
   8                        | bloque_sentencias_For sentencias_For

   9  sentencia : declarativas
  10            | ejecutables
  11            | sentencia declarativas
  12            | sentencia ejecutables

  13  declarativas : tipo lista_de_variables ';'
  14               | tipo lista_de_variables error
  15               | tipo error
  16               | declaracion_func

  17  ejecutables : asignacion
  18              | salida
  19              | sentencia_If
  20              | expresion_For
  21              | sentencia_when

  22  lista_de_variables : id
  23                     | lista_de_variables ',' id
  24                     | lista_de_variables id error

  25  encabezado_func : fun id '('
  26                  | fun '(' error

  27  parametro : tipo id
  28            | id error

  29  asig_fun : ':' tipo
  30           |

  31  cola_func : ')' asig_fun '{' cuerpo_fun '}'

  32  declaracion_func : encabezado_func parametro cola_func
  33                   | encabezado_func parametro ',' parametro cola_func
  34                   | encabezado_func parametro ',' parametro ',' parametro cola_func
  35                   | encabezado_func cola_func

  36  ret_fun : Return '(' expresion ')' ';'
  37          | Return expresion ')' ';'
  38          | Return '(' expresion ';'
  39          | Return expresion ';'
  40          | Return '(' expresion ')' error
  41          | error

  42  cuerpo_fun : sentencia ret_fun
  43             | ret_fun

  44  op_asignacion : opasignacion
  45                | ':' '='
  46                | '='

  47  asignacion : id op_asignacion expresion ';'
  48             | id op_asignacion expresion error
  49             | id op_asignacion expresion_For Else cte ';'
  50             | id op_asignacion expresion_For error

  51  salida : out '(' cadena ')' ';'
  52         | out '(' cadena ')' error
  53         | out '(' cadena error ';'
  54         | out cadena error ';'
  55         | '(' cadena error
  56         | out '(' ')' error ';'

  57  sentencia_If : If condicion_if then cuerpo_If end_if ';'
  58               | If condicion_if then cuerpo_If Else cuerpo_Else end_if ';'
  59               | If condicion_if then cuerpo_If Else cuerpo_Else end_if error
  60               | If condicion_if then cuerpo_If error
  61               | If condicion_if then cuerpo_If Else cuerpo_Else error ';'
  62               | If condicion_if cuerpo_If error

  63  cuerpo_If : '{' bloque_sentencias_For '}'
  64            | sentencias_For

  65  cuerpo_Else : '{' bloque_sentencias_For '}'
  66              | sentencias_For

  67  sentencia_when : when '(' condicion_for ')' then cuerpo_when ';'
  68                 | when condicion_for
  69                 | when '(' condicion_for then error
  70                 | when '(' condicion_for ')' cuerpo_when error

  71  cuerpo_when : bloque_sentencias

  72  encabezado_For : For '(' id op_asignacion cte ';' condicion_for ';' signo id ')' '{' bloque_sentencias_For '}' ';'
  73                 | For '(' id op_asignacion cte ';' condicion_for ';' signo id ')' sentencias_For
  74                 | id ':' For '(' id op_asignacion cte ';' condicion_for ';' signo id ')' '{' bloque_sentencias_For '}' ';'
  75                 | id ':' For '(' id op_asignacion cte ';' condicion_for ';' signo id ')' sentencias_For

  76  condicion_for : id comparador cte

  77  signo : '+'
  78        | '-'

  79  sentencias_For : ejecutables
  80                 | sentencia_BREAK
  81                 | sentencia_CONTINUE
  82                 | declarativas error

  83  expresion_For : encabezado_For

  84  sentencia_BREAK : BREAK ';'
  85                  | BREAK cte ';'
  86                  | BREAK error

  87  sentencia_CONTINUE : CONTINUE ';'
  88                     | CONTINUE error
  89                     | CONTINUE ':' id ';'
  90                     | CONTINUE ':' ';' error
  91                     | CONTINUE id ';' error
  92                     | CONTINUE ':' id error

  93  condicion_if : '(' expresion_relacional ')'
  94               | expresion_relacional ')'
  95               | '(' expresion_relacional
  96               | expresion_relacional

  97  expresion_relacional : expresion comparador expresion

  98  expresion : expresion signo termino
  99            | termino

 100  termino : termino '*' factor
 101          | termino '/' factor
 102          | factor

 103  factor : id
 104         | cte
 105         | '-' cte

 106  comparador : '<'
 107             | '>'
 108             | menorigual
 109             | mayorigual
 110             | '='
 111             | distinto

 112  tipo : i32
 113       | f32

state 0
	$accept : . programa $end  (0)

	id  shift 1
	.  error

	programa  goto 2
	encabezado_prog  goto 3


state 1
	encabezado_prog : id .  (2)

	.  reduce 2


state 2
	$accept : programa . $end  (0)

	$end  accept


state 3
	programa : encabezado_prog . bloque_sentencias  (1)

	id  shift 4
	If  shift 5
	out  shift 6
	fun  shift 7
	i32  shift 8
	when  shift 9
	For  shift 10
	f32  shift 11
	'{'  shift 12
	'('  shift 13
	.  error

	bloque_sentencias  goto 14
	sentencia  goto 15
	declarativas  goto 16
	ejecutables  goto 17
	tipo  goto 18
	declaracion_func  goto 19
	asignacion  goto 20
	salida  goto 21
	sentencia_If  goto 22
	expresion_For  goto 23
	sentencia_when  goto 24
	encabezado_func  goto 25
	encabezado_For  goto 26


state 4
	asignacion : id . op_asignacion expresion ';'  (47)
	asignacion : id . op_asignacion expresion error  (48)
	asignacion : id . op_asignacion expresion_For Else cte ';'  (49)
	asignacion : id . op_asignacion expresion_For error  (50)
	encabezado_For : id . ':' For '(' id op_asignacion cte ';' condicion_for ';' signo id ')' '{' bloque_sentencias_For '}' ';'  (74)
	encabezado_For : id . ':' For '(' id op_asignacion cte ';' condicion_for ';' signo id ')' sentencias_For  (75)

	opasignacion  shift 27
	':'  shift 28
	'='  shift 29
	.  error

	op_asignacion  goto 30


state 5
	sentencia_If : If . condicion_if then cuerpo_If end_if ';'  (57)
	sentencia_If : If . condicion_if then cuerpo_If Else cuerpo_Else end_if ';'  (58)
	sentencia_If : If . condicion_if then cuerpo_If Else cuerpo_Else end_if error  (59)
	sentencia_If : If . condicion_if then cuerpo_If error  (60)
	sentencia_If : If . condicion_if then cuerpo_If Else cuerpo_Else error ';'  (61)
	sentencia_If : If . condicion_if cuerpo_If error  (62)

	id  shift 31
	cte  shift 32
	'('  shift 33
	'-'  shift 34
	.  error

	expresion  goto 35
	condicion_if  goto 36
	expresion_relacional  goto 37
	termino  goto 38
	factor  goto 39


state 6
	salida : out . '(' cadena ')' ';'  (51)
	salida : out . '(' cadena ')' error  (52)
	salida : out . '(' cadena error ';'  (53)
	salida : out . cadena error ';'  (54)
	salida : out . '(' ')' error ';'  (56)

	cadena  shift 40
	'('  shift 41
	.  error


state 7
	encabezado_func : fun . id '('  (25)
	encabezado_func : fun . '(' error  (26)

	id  shift 42
	'('  shift 43
	.  error


state 8
	tipo : i32 .  (112)

	.  reduce 112


state 9
	sentencia_when : when . '(' condicion_for ')' then cuerpo_when ';'  (67)
	sentencia_when : when . condicion_for  (68)
	sentencia_when : when . '(' condicion_for then error  (69)
	sentencia_when : when . '(' condicion_for ')' cuerpo_when error  (70)

	id  shift 44
	'('  shift 45
	.  error

	condicion_for  goto 46


state 10
	encabezado_For : For . '(' id op_asignacion cte ';' condicion_for ';' signo id ')' '{' bloque_sentencias_For '}' ';'  (72)
	encabezado_For : For . '(' id op_asignacion cte ';' condicion_for ';' signo id ')' sentencias_For  (73)

	'('  shift 47
	.  error


state 11
	tipo : f32 .  (113)

	.  reduce 113


state 12
	bloque_sentencias : '{' . sentencia '}'  (4)
	bloque_sentencias : '{' . sentencia  (5)

	id  shift 4
	If  shift 5
	out  shift 6
	fun  shift 7
	i32  shift 8
	when  shift 9
	For  shift 10
	f32  shift 11
	'('  shift 13
	.  error

	sentencia  goto 48
	declarativas  goto 16
	ejecutables  goto 17
	tipo  goto 18
	declaracion_func  goto 19
	asignacion  goto 20
	salida  goto 21
	sentencia_If  goto 22
	expresion_For  goto 23
	sentencia_when  goto 24
	encabezado_func  goto 25
	encabezado_For  goto 26


state 13
	salida : '(' . cadena error  (55)

	cadena  shift 49
	.  error


state 14
	programa : encabezado_prog bloque_sentencias .  (1)
	bloque_sentencias : bloque_sentencias . '{' sentencia '}'  (3)

	'{'  shift 50
	$end  reduce 1


state 15
	bloque_sentencias : sentencia . '}'  (6)
	sentencia : sentencia . declarativas  (11)
	sentencia : sentencia . ejecutables  (12)

	id  shift 4
	If  shift 5
	out  shift 6
	fun  shift 7
	i32  shift 8
	when  shift 9
	For  shift 10
	f32  shift 11
	'}'  shift 51
	'('  shift 13
	.  error

	declarativas  goto 52
	ejecutables  goto 53
	tipo  goto 18
	declaracion_func  goto 19
	asignacion  goto 20
	salida  goto 21
	sentencia_If  goto 22
	expresion_For  goto 23
	sentencia_when  goto 24
	encabezado_func  goto 25
	encabezado_For  goto 26


state 16
	sentencia : declarativas .  (9)

	.  reduce 9


state 17
	sentencia : ejecutables .  (10)

	.  reduce 10


state 18
	declarativas : tipo . lista_de_variables ';'  (13)
	declarativas : tipo . lista_de_variables error  (14)
	declarativas : tipo . error  (15)

	error  shift 54
	id  shift 55
	.  error

	lista_de_variables  goto 56


state 19
	declarativas : declaracion_func .  (16)

	.  reduce 16


state 20
	ejecutables : asignacion .  (17)

	.  reduce 17


state 21
	ejecutables : salida .  (18)

	.  reduce 18


state 22
	ejecutables : sentencia_If .  (19)

	.  reduce 19


state 23
	ejecutables : expresion_For .  (20)

	.  reduce 20


state 24
	ejecutables : sentencia_when .  (21)

	.  reduce 21


state 25
	declaracion_func : encabezado_func . parametro cola_func  (32)
	declaracion_func : encabezado_func . parametro ',' parametro cola_func  (33)
	declaracion_func : encabezado_func . parametro ',' parametro ',' parametro cola_func  (34)
	declaracion_func : encabezado_func . cola_func  (35)

	id  shift 57
	i32  shift 8
	f32  shift 11
	')'  shift 58
	.  error

	tipo  goto 59
	parametro  goto 60
	cola_func  goto 61


state 26
	expresion_For : encabezado_For .  (83)

	.  reduce 83


state 27
	op_asignacion : opasignacion .  (44)

	.  reduce 44


state 28
	op_asignacion : ':' . '='  (45)
	encabezado_For : id ':' . For '(' id op_asignacion cte ';' condicion_for ';' signo id ')' '{' bloque_sentencias_For '}' ';'  (74)
	encabezado_For : id ':' . For '(' id op_asignacion cte ';' condicion_for ';' signo id ')' sentencias_For  (75)

	For  shift 62
	'='  shift 63
	.  error


state 29
	op_asignacion : '=' .  (46)

	.  reduce 46


state 30
	asignacion : id op_asignacion . expresion ';'  (47)
	asignacion : id op_asignacion . expresion error  (48)
	asignacion : id op_asignacion . expresion_For Else cte ';'  (49)
	asignacion : id op_asignacion . expresion_For error  (50)

	id  shift 64
	cte  shift 32
	For  shift 10
	'-'  shift 34
	.  error

	expresion_For  goto 65
	expresion  goto 66
	encabezado_For  goto 26
	termino  goto 38
	factor  goto 39


state 31
	factor : id .  (103)

	.  reduce 103


state 32
	factor : cte .  (104)

	.  reduce 104


state 33
	condicion_if : '(' . expresion_relacional ')'  (93)
	condicion_if : '(' . expresion_relacional  (95)

	id  shift 31
	cte  shift 32
	'-'  shift 34
	.  error

	expresion  goto 35
	expresion_relacional  goto 67
	termino  goto 38
	factor  goto 39


state 34
	factor : '-' . cte  (105)

	cte  shift 68
	.  error


state 35
	expresion_relacional : expresion . comparador expresion  (97)
	expresion : expresion . signo termino  (98)

	menorigual  shift 69
	mayorigual  shift 70
	distinto  shift 71
	'='  shift 72
	'+'  shift 73
	'-'  shift 74
	'<'  shift 75
	'>'  shift 76
	.  error

	signo  goto 77
	comparador  goto 78


state 36
	sentencia_If : If condicion_if . then cuerpo_If end_if ';'  (57)
	sentencia_If : If condicion_if . then cuerpo_If Else cuerpo_Else end_if ';'  (58)
	sentencia_If : If condicion_if . then cuerpo_If Else cuerpo_Else end_if error  (59)
	sentencia_If : If condicion_if . then cuerpo_If error  (60)
	sentencia_If : If condicion_if . then cuerpo_If Else cuerpo_Else error ';'  (61)
	sentencia_If : If condicion_if . cuerpo_If error  (62)

	id  shift 4
	If  shift 5
	then  shift 79
	out  shift 6
	fun  shift 7
	BREAK  shift 80
	i32  shift 8
	when  shift 9
	For  shift 10
	CONTINUE  shift 81
	f32  shift 11
	'{'  shift 82
	'('  shift 13
	.  error

	sentencias_For  goto 83
	declarativas  goto 84
	ejecutables  goto 85
	tipo  goto 18
	declaracion_func  goto 19
	asignacion  goto 20
	salida  goto 21
	sentencia_If  goto 22
	expresion_For  goto 23
	sentencia_when  goto 24
	encabezado_func  goto 25
	cuerpo_If  goto 86
	encabezado_For  goto 26
	sentencia_BREAK  goto 87
	sentencia_CONTINUE  goto 88


state 37
	condicion_if : expresion_relacional . ')'  (94)
	condicion_if : expresion_relacional .  (96)

	')'  shift 89
	id  reduce 96
	If  reduce 96
	then  reduce 96
	out  reduce 96
	fun  reduce 96
	BREAK  reduce 96
	i32  reduce 96
	when  reduce 96
	For  reduce 96
	CONTINUE  reduce 96
	f32  reduce 96
	'{'  reduce 96
	'('  reduce 96


state 38
	expresion : termino .  (99)
	termino : termino . '*' factor  (100)
	termino : termino . '/' factor  (101)

	'*'  shift 90
	'/'  shift 91
	error  reduce 99
	id  reduce 99
	If  reduce 99
	then  reduce 99
	out  reduce 99
	fun  reduce 99
	BREAK  reduce 99
	i32  reduce 99
	when  reduce 99
	For  reduce 99
	CONTINUE  reduce 99
	f32  reduce 99
	menorigual  reduce 99
	mayorigual  reduce 99
	distinto  reduce 99
	'{'  reduce 99
	';'  reduce 99
	'('  reduce 99
	')'  reduce 99
	'='  reduce 99
	'+'  reduce 99
	'-'  reduce 99
	'<'  reduce 99
	'>'  reduce 99


state 39
	termino : factor .  (102)

	.  reduce 102


state 40
	salida : out cadena . error ';'  (54)

	error  shift 92
	.  error


state 41
	salida : out '(' . cadena ')' ';'  (51)
	salida : out '(' . cadena ')' error  (52)
	salida : out '(' . cadena error ';'  (53)
	salida : out '(' . ')' error ';'  (56)

	cadena  shift 93
	')'  shift 94
	.  error


state 42
	encabezado_func : fun id . '('  (25)

	'('  shift 95
	.  error


state 43
	encabezado_func : fun '(' . error  (26)

	error  shift 96
	.  error


state 44
	condicion_for : id . comparador cte  (76)

	menorigual  shift 69
	mayorigual  shift 70
	distinto  shift 71
	'='  shift 72
	'<'  shift 75
	'>'  shift 76
	.  error

	comparador  goto 97


state 45
	sentencia_when : when '(' . condicion_for ')' then cuerpo_when ';'  (67)
	sentencia_when : when '(' . condicion_for then error  (69)
	sentencia_when : when '(' . condicion_for ')' cuerpo_when error  (70)

	id  shift 44
	.  error

	condicion_for  goto 98


state 46
	sentencia_when : when condicion_for .  (68)

	.  reduce 68


state 47
	encabezado_For : For '(' . id op_asignacion cte ';' condicion_for ';' signo id ')' '{' bloque_sentencias_For '}' ';'  (72)
	encabezado_For : For '(' . id op_asignacion cte ';' condicion_for ';' signo id ')' sentencias_For  (73)

	id  shift 99
	.  error


state 48
	bloque_sentencias : '{' sentencia . '}'  (4)
	bloque_sentencias : '{' sentencia .  (5)
	sentencia : sentencia . declarativas  (11)
	sentencia : sentencia . ejecutables  (12)

	id  shift 4
	If  shift 5
	out  shift 6
	fun  shift 7
	i32  shift 8
	when  shift 9
	For  shift 10
	f32  shift 11
	'}'  shift 100
	'('  shift 13
	$end  reduce 5
	error  reduce 5
	'{'  reduce 5
	';'  reduce 5

	declarativas  goto 52
	ejecutables  goto 53
	tipo  goto 18
	declaracion_func  goto 19
	asignacion  goto 20
	salida  goto 21
	sentencia_If  goto 22
	expresion_For  goto 23
	sentencia_when  goto 24
	encabezado_func  goto 25
	encabezado_For  goto 26


state 49
	salida : '(' cadena . error  (55)

	error  shift 101
	.  error


state 50
	bloque_sentencias : bloque_sentencias '{' . sentencia '}'  (3)

	id  shift 4
	If  shift 5
	out  shift 6
	fun  shift 7
	i32  shift 8
	when  shift 9
	For  shift 10
	f32  shift 11
	'('  shift 13
	.  error

	sentencia  goto 102
	declarativas  goto 16
	ejecutables  goto 17
	tipo  goto 18
	declaracion_func  goto 19
	asignacion  goto 20
	salida  goto 21
	sentencia_If  goto 22
	expresion_For  goto 23
	sentencia_when  goto 24
	encabezado_func  goto 25
	encabezado_For  goto 26


state 51
	bloque_sentencias : sentencia '}' .  (6)

	.  reduce 6


state 52
	sentencia : sentencia declarativas .  (11)

	.  reduce 11


state 53
	sentencia : sentencia ejecutables .  (12)

	.  reduce 12


state 54
	declarativas : tipo error .  (15)

	.  reduce 15


state 55
	lista_de_variables : id .  (22)

	.  reduce 22


state 56
	declarativas : tipo lista_de_variables . ';'  (13)
	declarativas : tipo lista_de_variables . error  (14)
	lista_de_variables : lista_de_variables . ',' id  (23)
	lista_de_variables : lista_de_variables . id error  (24)

	error  shift 103
	id  shift 104
	';'  shift 105
	','  shift 106
	.  error


state 57
	parametro : id . error  (28)

	error  shift 107
	.  error


state 58
	cola_func : ')' . asig_fun '{' cuerpo_fun '}'  (31)
	asig_fun : .  (30)

	':'  shift 108
	'{'  reduce 30

	asig_fun  goto 109


state 59
	parametro : tipo . id  (27)

	id  shift 110
	.  error


state 60
	declaracion_func : encabezado_func parametro . cola_func  (32)
	declaracion_func : encabezado_func parametro . ',' parametro cola_func  (33)
	declaracion_func : encabezado_func parametro . ',' parametro ',' parametro cola_func  (34)

	','  shift 111
	')'  shift 58
	.  error

	cola_func  goto 112


state 61
	declaracion_func : encabezado_func cola_func .  (35)

	.  reduce 35


state 62
	encabezado_For : id ':' For . '(' id op_asignacion cte ';' condicion_for ';' signo id ')' '{' bloque_sentencias_For '}' ';'  (74)
	encabezado_For : id ':' For . '(' id op_asignacion cte ';' condicion_for ';' signo id ')' sentencias_For  (75)

	'('  shift 113
	.  error


state 63
	op_asignacion : ':' '=' .  (45)

	.  reduce 45


state 64
	encabezado_For : id . ':' For '(' id op_asignacion cte ';' condicion_for ';' signo id ')' '{' bloque_sentencias_For '}' ';'  (74)
	encabezado_For : id . ':' For '(' id op_asignacion cte ';' condicion_for ';' signo id ')' sentencias_For  (75)
	factor : id .  (103)

	':'  shift 114
	error  reduce 103
	';'  reduce 103
	'+'  reduce 103
	'-'  reduce 103
	'*'  reduce 103
	'/'  reduce 103


state 65
	asignacion : id op_asignacion expresion_For . Else cte ';'  (49)
	asignacion : id op_asignacion expresion_For . error  (50)

	error  shift 115
	Else  shift 116
	.  error


state 66
	asignacion : id op_asignacion expresion . ';'  (47)
	asignacion : id op_asignacion expresion . error  (48)
	expresion : expresion . signo termino  (98)

	error  shift 117
	';'  shift 118
	'+'  shift 73
	'-'  shift 74
	.  error

	signo  goto 77


state 67
	condicion_if : '(' expresion_relacional . ')'  (93)
	condicion_if : '(' expresion_relacional .  (95)

	')'  shift 119
	id  reduce 95
	If  reduce 95
	then  reduce 95
	out  reduce 95
	fun  reduce 95
	BREAK  reduce 95
	i32  reduce 95
	when  reduce 95
	For  reduce 95
	CONTINUE  reduce 95
	f32  reduce 95
	'{'  reduce 95
	'('  reduce 95


state 68
	factor : '-' cte .  (105)

	.  reduce 105


state 69
	comparador : menorigual .  (108)

	.  reduce 108


state 70
	comparador : mayorigual .  (109)

	.  reduce 109


state 71
	comparador : distinto .  (111)

	.  reduce 111


state 72
	comparador : '=' .  (110)

	.  reduce 110


state 73
	signo : '+' .  (77)

	.  reduce 77


state 74
	signo : '-' .  (78)

	.  reduce 78


state 75
	comparador : '<' .  (106)

	.  reduce 106


state 76
	comparador : '>' .  (107)

	.  reduce 107


state 77
	expresion : expresion signo . termino  (98)

	id  shift 31
	cte  shift 32
	'-'  shift 34
	.  error

	termino  goto 120
	factor  goto 39


state 78
	expresion_relacional : expresion comparador . expresion  (97)

	id  shift 31
	cte  shift 32
	'-'  shift 34
	.  error

	expresion  goto 121
	termino  goto 38
	factor  goto 39


state 79
	sentencia_If : If condicion_if then . cuerpo_If end_if ';'  (57)
	sentencia_If : If condicion_if then . cuerpo_If Else cuerpo_Else end_if ';'  (58)
	sentencia_If : If condicion_if then . cuerpo_If Else cuerpo_Else end_if error  (59)
	sentencia_If : If condicion_if then . cuerpo_If error  (60)
	sentencia_If : If condicion_if then . cuerpo_If Else cuerpo_Else error ';'  (61)

	id  shift 4
	If  shift 5
	out  shift 6
	fun  shift 7
	BREAK  shift 80
	i32  shift 8
	when  shift 9
	For  shift 10
	CONTINUE  shift 81
	f32  shift 11
	'{'  shift 82
	'('  shift 13
	.  error

	sentencias_For  goto 83
	declarativas  goto 84
	ejecutables  goto 85
	tipo  goto 18
	declaracion_func  goto 19
	asignacion  goto 20
	salida  goto 21
	sentencia_If  goto 22
	expresion_For  goto 23
	sentencia_when  goto 24
	encabezado_func  goto 25
	cuerpo_If  goto 122
	encabezado_For  goto 26
	sentencia_BREAK  goto 87
	sentencia_CONTINUE  goto 88


state 80
	sentencia_BREAK : BREAK . ';'  (84)
	sentencia_BREAK : BREAK . cte ';'  (85)
	sentencia_BREAK : BREAK . error  (86)

	error  shift 123
	cte  shift 124
	';'  shift 125
	.  error


state 81
	sentencia_CONTINUE : CONTINUE . ';'  (87)
	sentencia_CONTINUE : CONTINUE . error  (88)
	sentencia_CONTINUE : CONTINUE . ':' id ';'  (89)
	sentencia_CONTINUE : CONTINUE . ':' ';' error  (90)
	sentencia_CONTINUE : CONTINUE . id ';' error  (91)
	sentencia_CONTINUE : CONTINUE . ':' id error  (92)

	error  shift 126
	id  shift 127
	';'  shift 128
	':'  shift 129
	.  error


state 82
	cuerpo_If : '{' . bloque_sentencias_For '}'  (63)

	id  shift 4
	If  shift 5
	out  shift 6
	fun  shift 7
	BREAK  shift 80
	i32  shift 8
	when  shift 9
	For  shift 10
	CONTINUE  shift 81
	f32  shift 11
	'('  shift 13
	.  error

	bloque_sentencias_For  goto 130
	sentencias_For  goto 131
	declarativas  goto 84
	ejecutables  goto 85
	tipo  goto 18
	declaracion_func  goto 19
	asignacion  goto 20
	salida  goto 21
	sentencia_If  goto 22
	expresion_For  goto 23
	sentencia_when  goto 24
	encabezado_func  goto 25
	encabezado_For  goto 26
	sentencia_BREAK  goto 87
	sentencia_CONTINUE  goto 88


state 83
	cuerpo_If : sentencias_For .  (64)

	.  reduce 64


state 84
	sentencias_For : declarativas . error  (82)

	error  shift 132
	.  error


state 85
	sentencias_For : ejecutables .  (79)

	.  reduce 79


state 86
	sentencia_If : If condicion_if cuerpo_If . error  (62)

	error  shift 133
	.  error


state 87
	sentencias_For : sentencia_BREAK .  (80)

	.  reduce 80


state 88
	sentencias_For : sentencia_CONTINUE .  (81)

	.  reduce 81


state 89
	condicion_if : expresion_relacional ')' .  (94)

	.  reduce 94


state 90
	termino : termino '*' . factor  (100)

	id  shift 31
	cte  shift 32
	'-'  shift 34
	.  error

	factor  goto 134


state 91
	termino : termino '/' . factor  (101)

	id  shift 31
	cte  shift 32
	'-'  shift 34
	.  error

	factor  goto 135


state 92
	salida : out cadena error . ';'  (54)

	';'  shift 136
	.  error


state 93
	salida : out '(' cadena . ')' ';'  (51)
	salida : out '(' cadena . ')' error  (52)
	salida : out '(' cadena . error ';'  (53)

	error  shift 137
	')'  shift 138
	.  error


state 94
	salida : out '(' ')' . error ';'  (56)

	error  shift 139
	.  error


state 95
	encabezado_func : fun id '(' .  (25)

	.  reduce 25


state 96
	encabezado_func : fun '(' error .  (26)

	.  reduce 26


state 97
	condicion_for : id comparador . cte  (76)

	cte  shift 140
	.  error


state 98
	sentencia_when : when '(' condicion_for . ')' then cuerpo_when ';'  (67)
	sentencia_when : when '(' condicion_for . then error  (69)
	sentencia_when : when '(' condicion_for . ')' cuerpo_when error  (70)

	then  shift 141
	')'  shift 142
	.  error


state 99
	encabezado_For : For '(' id . op_asignacion cte ';' condicion_for ';' signo id ')' '{' bloque_sentencias_For '}' ';'  (72)
	encabezado_For : For '(' id . op_asignacion cte ';' condicion_for ';' signo id ')' sentencias_For  (73)

	opasignacion  shift 27
	':'  shift 143
	'='  shift 29
	.  error

	op_asignacion  goto 144


state 100
	bloque_sentencias : '{' sentencia '}' .  (4)

	.  reduce 4


state 101
	salida : '(' cadena error .  (55)

	.  reduce 55


state 102
	bloque_sentencias : bloque_sentencias '{' sentencia . '}'  (3)
	sentencia : sentencia . declarativas  (11)
	sentencia : sentencia . ejecutables  (12)

	id  shift 4
	If  shift 5
	out  shift 6
	fun  shift 7
	i32  shift 8
	when  shift 9
	For  shift 10
	f32  shift 11
	'}'  shift 145
	'('  shift 13
	.  error

	declarativas  goto 52
	ejecutables  goto 53
	tipo  goto 18
	declaracion_func  goto 19
	asignacion  goto 20
	salida  goto 21
	sentencia_If  goto 22
	expresion_For  goto 23
	sentencia_when  goto 24
	encabezado_func  goto 25
	encabezado_For  goto 26


state 103
	declarativas : tipo lista_de_variables error .  (14)

	.  reduce 14


state 104
	lista_de_variables : lista_de_variables id . error  (24)

	error  shift 146
	.  error


state 105
	declarativas : tipo lista_de_variables ';' .  (13)

	.  reduce 13


state 106
	lista_de_variables : lista_de_variables ',' . id  (23)

	id  shift 147
	.  error


state 107
	parametro : id error .  (28)

	.  reduce 28


state 108
	asig_fun : ':' . tipo  (29)

	i32  shift 8
	f32  shift 11
	.  error

	tipo  goto 148


state 109
	cola_func : ')' asig_fun . '{' cuerpo_fun '}'  (31)

	'{'  shift 149
	.  error


state 110
	parametro : tipo id .  (27)

	.  reduce 27


state 111
	declaracion_func : encabezado_func parametro ',' . parametro cola_func  (33)
	declaracion_func : encabezado_func parametro ',' . parametro ',' parametro cola_func  (34)

	id  shift 57
	i32  shift 8
	f32  shift 11
	.  error

	tipo  goto 59
	parametro  goto 150


state 112
	declaracion_func : encabezado_func parametro cola_func .  (32)

	.  reduce 32


state 113
	encabezado_For : id ':' For '(' . id op_asignacion cte ';' condicion_for ';' signo id ')' '{' bloque_sentencias_For '}' ';'  (74)
	encabezado_For : id ':' For '(' . id op_asignacion cte ';' condicion_for ';' signo id ')' sentencias_For  (75)

	id  shift 151
	.  error


state 114
	encabezado_For : id ':' . For '(' id op_asignacion cte ';' condicion_for ';' signo id ')' '{' bloque_sentencias_For '}' ';'  (74)
	encabezado_For : id ':' . For '(' id op_asignacion cte ';' condicion_for ';' signo id ')' sentencias_For  (75)

	For  shift 62
	.  error


state 115
	asignacion : id op_asignacion expresion_For error .  (50)

	.  reduce 50


state 116
	asignacion : id op_asignacion expresion_For Else . cte ';'  (49)

	cte  shift 152
	.  error


state 117
	asignacion : id op_asignacion expresion error .  (48)

	.  reduce 48


state 118
	asignacion : id op_asignacion expresion ';' .  (47)

	.  reduce 47


state 119
	condicion_if : '(' expresion_relacional ')' .  (93)

	.  reduce 93


state 120
	expresion : expresion signo termino .  (98)
	termino : termino . '*' factor  (100)
	termino : termino . '/' factor  (101)

	'*'  shift 90
	'/'  shift 91
	error  reduce 98
	id  reduce 98
	If  reduce 98
	then  reduce 98
	out  reduce 98
	fun  reduce 98
	BREAK  reduce 98
	i32  reduce 98
	when  reduce 98
	For  reduce 98
	CONTINUE  reduce 98
	f32  reduce 98
	menorigual  reduce 98
	mayorigual  reduce 98
	distinto  reduce 98
	'{'  reduce 98
	';'  reduce 98
	'('  reduce 98
	')'  reduce 98
	'='  reduce 98
	'+'  reduce 98
	'-'  reduce 98
	'<'  reduce 98
	'>'  reduce 98


state 121
	expresion_relacional : expresion comparador expresion .  (97)
	expresion : expresion . signo termino  (98)

	'+'  shift 73
	'-'  shift 74
	id  reduce 97
	If  reduce 97
	then  reduce 97
	out  reduce 97
	fun  reduce 97
	BREAK  reduce 97
	i32  reduce 97
	when  reduce 97
	For  reduce 97
	CONTINUE  reduce 97
	f32  reduce 97
	'{'  reduce 97
	'('  reduce 97
	')'  reduce 97

	signo  goto 77


state 122
	sentencia_If : If condicion_if then cuerpo_If . end_if ';'  (57)
	sentencia_If : If condicion_if then cuerpo_If . Else cuerpo_Else end_if ';'  (58)
	sentencia_If : If condicion_if then cuerpo_If . Else cuerpo_Else end_if error  (59)
	sentencia_If : If condicion_if then cuerpo_If . error  (60)
	sentencia_If : If condicion_if then cuerpo_If . Else cuerpo_Else error ';'  (61)

	error  shift 153
	Else  shift 154
	end_if  shift 155
	.  error


state 123
	sentencia_BREAK : BREAK error .  (86)

	.  reduce 86


state 124
	sentencia_BREAK : BREAK cte . ';'  (85)

	';'  shift 156
	.  error


state 125
	sentencia_BREAK : BREAK ';' .  (84)

	.  reduce 84


state 126
	sentencia_CONTINUE : CONTINUE error .  (88)

	.  reduce 88


state 127
	sentencia_CONTINUE : CONTINUE id . ';' error  (91)

	';'  shift 157
	.  error


state 128
	sentencia_CONTINUE : CONTINUE ';' .  (87)

	.  reduce 87


state 129
	sentencia_CONTINUE : CONTINUE ':' . id ';'  (89)
	sentencia_CONTINUE : CONTINUE ':' . ';' error  (90)
	sentencia_CONTINUE : CONTINUE ':' . id error  (92)

	id  shift 158
	';'  shift 159
	.  error


state 130
	bloque_sentencias_For : bloque_sentencias_For . sentencias_For  (8)
	cuerpo_If : '{' bloque_sentencias_For . '}'  (63)

	id  shift 4
	If  shift 5
	out  shift 6
	fun  shift 7
	BREAK  shift 80
	i32  shift 8
	when  shift 9
	For  shift 10
	CONTINUE  shift 81
	f32  shift 11
	'}'  shift 160
	'('  shift 13
	.  error
